--- a/client/src/components/Home.module.css
+++ b/client/src/components/Home.module.css
@@ -33,7 +33,7 @@
   margin-top: 18px;
   font-size: 16px;
   transition-duration: 0.6s;
-  font-family: Microsoft JhengHei UI, sans-serif;
+  font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
   /* Transition duration allows property changes in CSS values, such as those that may be defined to occur on :hover or :focus, to occur smoothly over a specified duration */
 }
 
@@ -53,7 +53,7 @@
   margin-left: 14px;
   margin-right: 14px;
   border-radius: 9px;
-  font-family: Microsoft JhengHei UI, sans-serif;
+  font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
   cursor: pointer;
   transition-duration: 0.4s;
 }
@@ -73,7 +73,7 @@
   margin-left: 14px;
   margin-right: 14px;
   border-radius: 9px;
-  font-family: Microsoft JhengHei UI, sans-serif;
+  font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
   cursor: pointer;
   transition-duration: 0.4s;
 }
@@ -93,7 +93,7 @@
   margin-left: 14px;
   margin-right: 14px;
   border-radius: 9px;
-  font-family: Microsoft JhengHei UI, sans-serif;
+  font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
   cursor: pointer;
   transition-duration: 0.4s;
 }
@@ -113,7 +113,7 @@
   margin-left: 14px;
   margin-right: 14px;
   border-radius: 9px;
-  font-family: Microsoft JhengHei UI, sans-serif;
+  font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
   cursor: pointer;
   transition-duration: 0.4s;
 }
@@ -133,7 +133,7 @@
   margin-left: 14px;
   margin-right: 14px;
   border-radius: 9px;
-  font-family: Microsoft JhengHei UI, sans-serif;
+  font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
   cursor: pointer;
   transition-duration: 0.4s;
 }
@@ -168,4 +168,117 @@
 ::-webkit-scrollbar-thumb {
   background: #707070;
   border-radius: 9px;
+}
+
+@media (min-width: 320px) {
+  ::-webkit-scrollbar {
+    width: 0px;
+  }
+  .filtersContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .inputs {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .remove,
+  .selectA_Z,
+  .selectWei,
+  .selectTemp,
+  .selectFilter {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    margin-left: 0;
+    margin-right: 0;
+    justify-content: center;
+    align-items: center;
+  }
+  .containerCards {
+    display: grid;
+    grid-template-columns: 100%;
+  }
+}
+
+@media (min-width: 320px) {
+  ::-webkit-scrollbar {
+    width: 0px;
+  }
+  .inputs {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .remove,
+  .selectA_Z,
+  .selectWei,
+  .selectTemp,
+  .selectFilter {
+    width: 90%;
+    max-width: 480px;
+    display: flex;
+    flex-direction: column;
+    margin-left: 0;
+    margin-right: 0;
+    justify-content: center;
+    align-items: center;
+  }
+  .containerCards {
+    display: grid;
+    grid-template-columns: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (min-width: 780px) {
+  ::-webkit-scrollbar {
+    width: 7px;
+  }
+  .containerCards {
+    display: grid;
+    grid-template-columns: 45% 45%;
+  }
+}
+
+@media (min-width: 1155px) {
+  .filtersContainer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  .inputs {
+    max-width: 1155px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .remove,
+  .selectA_Z,
+  .selectWei,
+  .selectTemp,
+  .selectFilter {
+    margin-left: 20px;
+  }
+  .remove:first-child {
+    margin-left: 0;
+  }
+}
+
+@media (min-width: 1365px) {
+  .containerCards {
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+  }
 }
